--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,24 +1,27 @@
 <header class="header">
   <div class="container header-container">
     <nav class="header-nav">
-
       <a class="logo" href="./index.html">watchcharm</a>
 
       <ul class="header-list-nav">
-        <li><a class="link-header link-home-header" href="./index.html">Home</a></li>
+        <li>
+          <a class="link-header link-home-header" href="./index.html">Home</a>
+        </li>
         <li><a class="link-header" href="#about-us">About Us</a></li>
         <li><a class="link-header" href="#catalog">Catalog</a></li>
         <li><a class="link-header" href="#sale">Sale</a></li>
         <li><a class="link-header" href="#reviews">Reviews</a></li>
         <li><a class="link-header" href="#contact Us">Contact Us</a></li>
       </ul>
-
     </nav>
     <div class="header-socials">
       <ul class="header-icon-socials">
         <li class="header-item-icon">
-
-          <a href="https://www.facebook.com/goITclub/" target="_blank" class="social-link-header">
+          <a
+            href="https://www.facebook.com/goITclub/"
+            target="_blank"
+            class="social-link-header"
+          >
             <svg width="21" height="20">
               <use href="./img/icons_header.svg#icon-facebook"></use>
             </svg>
@@ -26,7 +29,11 @@
         </li>
 
         <li class="header-item-icon">
-          <a href="https://www.instagram.com/goitclub/" target="_blank" class="social-link-header">
+          <a
+            href="https://www.instagram.com/goitclub/"
+            target="_blank"
+            class="social-link-header"
+          >
             <svg width="21" height="20">
               <use href="./img/icons_header.svg#icon-instagram"></use>
             </svg>
@@ -34,16 +41,19 @@
         </li>
 
         <li class="header-item-icon">
-          <a href="https://www.youtube.com/c/GoIT" target="_blank" class="social-link-header">
+          <a
+            href="https://www.youtube.com/c/GoIT"
+            target="_blank"
+            class="social-link-header"
+          >
             <svg width="21" height="20">
               <use href="./img/icons_header.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
-
       </ul>
     </div>
-    <button type="button" class="open-menu-btn">
+    <button type="button" class="open-menu-btn" data-modal-open>
       <svg width="28" height="14" class="icon-btn">
         <use href="./img/icons_header.svg#icon-header-menu-open"></use>
       </svg>
@@ -52,7 +62,6 @@
   <!--menu-->
   <div class="menu-header">
     <div class="menu-header-wrap">
-
       <button type="button" class="btn-close">
         <svg width="24" height="24">
           <use href="/img/icons_header.svg#icon-header-close"></use>
@@ -61,20 +70,24 @@
 
       <nav class="menu-header-nav">
         <ul class="menu-header-list-nav">
-          <li><a class="link-header link-home-header" href="./index.html">Home</a></li>
+          <li>
+            <a class="link-header link-home-header" href="./index.html">Home</a>
+          </li>
           <li><a class="link-header" href="#about Us">About Us</a></li>
           <li><a class="link-header" href="#catalog">Catalog</a></li>
           <li><a class="link-header" href="#sale">Sale</a></li>
           <li><a class="link-header" href="#reviews">Reviews</a></li>
           <li><a class="link-header" href="#contact Us">Contact Us</a></li>
         </ul>
-
       </nav>
       <div class="menu-header-socials">
-
         <ul class="menu-header-icon-socials">
           <li class="menu-header-item-icon">
-            <a href="https://www.facebook.com/goITclub/" target="_blank" class="menu-social-link-header">
+            <a
+              href="https://www.facebook.com/goITclub/"
+              target="_blank"
+              class="menu-social-link-header"
+            >
               <svg width="21" height="20">
                 <use href="./img/icons_header.svg#icon-facebook"></use>
               </svg>
@@ -82,7 +95,11 @@
           </li>
 
           <li class="menu-header-item-icon">
-            <a href="https://www.instagram.com/goitclub/" target="_blank" class="menu-social-link-header ">
+            <a
+              href="https://www.instagram.com/goitclub/"
+              target="_blank"
+              class="menu-social-link-header"
+            >
               <svg width="21" height="20">
                 <use href="./img/icons_header.svg#icon-instagram"></use>
               </svg>
@@ -90,13 +107,16 @@
           </li>
 
           <li class="menu-header-item-icon">
-            <a href="https://www.youtube.com/c/GoIT" target="_blank" class="menu-social-link-header">
+            <a
+              href="https://www.youtube.com/c/GoIT"
+              target="_blank"
+              class="menu-social-link-header"
+            >
               <svg width="21" height="20">
                 <use href="./img/icons_header.svg#icon-youtube"></use>
               </svg>
             </a>
           </li>
-
         </ul>
       </div>
     </div>
