--- a/src/partials/contact-us.html
+++ b/src/partials/contact-us.html
@@ -1,73 +1,94 @@
-<section class="contact-us">
+<section class="contact-us" id="contact-us">
   <div class="div-form-contact-us container">
-
     <h2 class="title-contact-us">Contact Us</h2>
 
     <div class="contact-us-wrap-content">
-
       <div class="container-form-contact-us">
-
         <p class="p-contact-us">
           Please use the form below to contact us. Enter your name, email,
           phone, and message and we'll get back to you shortly.
         </p>
 
         <form class="form-contact-us">
-
           <div class="div-input-contact-us">
-
-            <input class="contact-us-form-input" type="text" name="user-name" placeholder="Name" />
-
+            <input
+              class="contact-us-form-input"
+              type="text"
+              name="user-name"
+              placeholder="Name"
+              required
+            />
           </div>
 
           <div class="div-input-contact-us">
-
-            <input class="contact-us-form-input" type="email" pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
-              name="email" placeholder="Email" />
-
+            <input
+              class="contact-us-form-input"
+              type="email"
+              pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
+              name="email"
+              placeholder="Email"
+              required
+            />
           </div>
 
           <div class="div-input-contact-us">
-
-            <input class="contact-us-form-input" type="tel" pattern="^\+\d{3}-\d{2}-\d{3}-\d{2}-\d{2}$" name="phone"
-              placeholder="+380" />
-
+            <input
+              class="contact-us-form-input"
+              type="tel"
+              pattern="^\+\d{3}-\d{2}-\d{3}-\d{2}-\d{2}$"
+              name="phone"
+              placeholder="+380"
+              required
+            />
           </div>
 
           <div class="contact-us-form-textarea">
-
-            <textarea class="textarea-comment-contact-us" name="text" rows="5" placeholder="Comment"></textarea>
-
+            <textarea
+              class="textarea-comment-contact-us"
+              name="text"
+              rows="5"
+              placeholder="Comment"
+            ></textarea>
           </div>
 
           <button class="button-send-contact-us" type="submit">Send</button>
-
         </form>
       </div>
 
       <div class="div-img-contact-us">
-
         <picture>
-          <source srcset="
-            ./img/beforefooter-img-desk-1x.jpg 1x,
-            ./img/beforefooter-img-desk-2x.jpg 2x
-          " media="(min-width: 1280px)" />
-          <source srcset="
-            ./img/beforefooter-img-tab-1x.jpg 1x,
-            ./img/beforefooter-img-tab-2x.jpg 2x
-          " media="(min-width: 768px)" />
-          <source srcset="
-            ./img/beforefooter-img-mob-1x.jpg 1x,
-            ./img/beforefooter-img-mob-2x.jpg 2x
-          " media="(max-width: 767px)" />
-          <img srcset="
-            ./img/beforefooter-img-mob-1x.jpg 1x,
-            ./img/beforefooter-img-mob-2x.jpg 2x
-          " src="./img/beforefooter-img-mob-1x.jpg" class="beforefooter-img" alt="clock" />
+          <source
+            srcset="
+              ./img/beforefooter-img-desk-1x.jpg 1x,
+              ./img/beforefooter-img-desk-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./img/beforefooter-img-tab-1x.jpg 1x,
+              ./img/beforefooter-img-tab-2x.jpg 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
+              ./img/beforefooter-img-mob-1x.jpg 1x,
+              ./img/beforefooter-img-mob-2x.jpg 2x
+            "
+            media="(max-width: 767px)"
+          />
+          <img
+            srcset="
+              ./img/beforefooter-img-mob-1x.jpg 1x,
+              ./img/beforefooter-img-mob-2x.jpg 2x
+            "
+            src="./img/beforefooter-img-mob-1x.jpg"
+            class="beforefooter-img"
+            alt="clock"
+          />
         </picture>
-
       </div>
-
     </div>
   </div>
 </section>
