--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,65 +2,79 @@
   <div class="container hero-container">
     <div class="hero-big-box">
       <div class="hero-title-text-box">
-
         <h1 class="title-hero">
-          Welcome to our <span class="collection-color">collection</span> of premium
-          watches
+          Welcome to our <span class="collection-color">collection</span> of
+          premium watches
         </h1>
 
         <p class="text-hero">
           Our watches are not just timepieces, but also an expression of your
-          personality and lifestyle. From classic designs to modern ones, we have a
-          watch to suit every taste and occasion.
+          personality and lifestyle. From classic designs to modern ones, we
+          have a watch to suit every taste and occasion.
         </p>
-
       </div>
 
       <div class="hero-second-box">
         <div class="hero-second-box-pictures">
-
           <picture>
-            <source srcset="
-                              ./img/hero-img-desk-1x.png 1x,
-                              ./img/hero-img-desk-2x.png 2x
-                            " media="(min-width:1158px)" />
-            <source srcset="
-                              ./img/hero-img-tab-1x.png 1x,
-                              ./img/hero-img-tab-2x.png 2x
-                            " media="(min-width:768px)" />
-            <source srcset="
-                              ./img/hero-img-mob-1x.png 1x,
-                              ./img/hero-img-mob-2x.png 2x
-                            " media="(max-width:767px)" />
-            <img class="" src="./img/hero-img-mob-1x.png" alt="Victoria Romashenko" />
+            <source
+              srcset="
+                ./img/hero-img-desk-1x.png 1x,
+                ./img/hero-img-desk-2x.png 2x
+              "
+              media="(min-width:1158px)"
+            />
+            <source
+              srcset="
+                ./img/hero-img-tab-1x.png 1x,
+                ./img/hero-img-tab-2x.png 2x
+              "
+              media="(min-width:768px)"
+            />
+            <source
+              srcset="
+                ./img/hero-img-mob-1x.png 1x,
+                ./img/hero-img-mob-2x.png 2x
+              "
+              media="(max-width:767px)"
+            />
+            <img
+              class=""
+              src="./img/hero-img-mob-1x.png"
+              alt="Victoria Romashenko"
+            />
           </picture>
-
         </div>
         <div class="hero-second-box-ancor">
-
-          <a class="link-hero_and_footer" href="#reviews">Scroll down</a>
-
+          <a class="link-hero_and_footer" href="#to-footer">Scroll down</a>
         </div>
       </div>
     </div>
     <div class="backdrop-hero-img">
-
       <picture>
-        <source srcset="
+        <source
+          srcset="
             ./img/hero-img-watch-desk-1x.jpg 1x,
             ./img/hero-img-watch-desk-2x.jpg 2x
-          " media="(min-width: 1158px)" />
-        <source srcset="
+          "
+          media="(min-width: 1158px)"
+        />
+        <source
+          srcset="
             ./img/hero-img-watch-tab-1x.jpg 1x,
             ./img/hero-img-watch-tab-2x.jpg 2x
-          " media="(min-width: 768px)" />
-        <source srcset="
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
             ./img/hero-img-watch-mob-1x.jpg 1x,
             ./img/hero-img-watch-mob-2x.jpg 2x
-          " media="(max-width: 767px)" />
+          "
+          media="(max-width: 767px)"
+        />
         <img src="./img/hero-img-watch-mob-1x.jpg" alt="watch" />
       </picture>
-
     </div>
   </div>
 </section>
