--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -60,9 +60,9 @@
     </button>
   </div>
   <!--menu-->
-  <div class="menu-header">
+  <div class="menu-header is-open" data-modal>
     <div class="menu-header-wrap">
-      <button type="button" class="btn-close">
+      <button type="button" class="btn-close" data-modal-close>
         <svg width="24" height="24">
           <use href="/img/icons_header.svg#icon-header-close"></use>
         </svg>
