--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,34 +1,26 @@
 /*footer*/
 .footer {
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: row;
-    gap: 10px;
-    border-radius: 30px;
-    padding: 40px 28px 28px 28px;
-    background: #0c0c0c;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
-.footer-container {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
+.footer-background-color {
+    background: #0c0c0c;
+    border-radius: 30px;
+    padding: 40px 28px 28px 28px;
     flex-direction: column;
     gap: 92px;
+    display: flex;
 }
 
 .footer-section-logo {
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
     flex-direction: column;
     gap: 20px;
 }
 
 .logo-footer {
-    font-family: "Gilroy", sans-serif;
     font-weight: 500;
     font-size: 16px;
     letter-spacing: -0.02em;
@@ -37,9 +29,6 @@
 
 .footer-icon-socials {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
     gap: 10px;
 }
 
@@ -55,6 +44,7 @@
     fill: #fbfbfb;
     width: 16px;
     height: 16px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link:hover,
@@ -74,26 +64,22 @@
 }
 
 .footer-tel-link {
-    font-family: "Gilroy", sans-serif;
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
     text-transform: uppercase;
     color: #fbfbfb;
-    text-align: center;
 }
 
 .footer-text-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     margin-top: 40px;
-    width: 279px;
+    margin-left: auto;
+    margin-top: auto;
+    max-width: 279px;
     height: 96px;
 }
 
 .footer-text {
-    font-family: "Gilroy", sans-serif;
     font-weight: 600;
     font-size: 20px;
     line-height: 1.2;
@@ -105,59 +91,47 @@
 
 .footer-content {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
     flex-direction: column;
     gap: 48px;
 }
 
 .footer-section-menu {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
     position: relative;
-    flex-direction: row;
-    gap: 49px;
 }
- .footer-section-menu::after {
-     content: "";
-     width: 100%;
-     position: absolute;
-     left: 0;
-     bottom: -24px;
-     height: 1px;
-     background-color: rgba(251, 251, 251, 0.1);
- }
+
+.footer-section-menu::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -24px;
+    height: 1px;
+    background-color: rgba(251, 251, 251, 0.1);
+}
+
 .footer-list {
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: row;
     gap: 16px 13px;
     min-width: 147px;
 }
 
 .link-footer {
-    font-family: "Gilroy", sans-serif;
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
-    text-align: center;
     color: #fbfbfb;
 }
 
 .footer-address {
-    font-family: "Gilroy", sans-serif;
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
     color: #fbfbfb;
-    margin: 0;
 }
 
 .footer-box-text {
-    font-family: "Gilroy", sans-serif;
     font-weight: 500;
     font-size: 10px;
     line-height: 1.4;
@@ -168,14 +142,13 @@
 
 .footer-box-list {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
     flex-direction: row;
     gap: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .footer-box-link {
-    font-family: "Gilroy", sans-serif;
     font-weight: 500;
     font-size: 10px;
     line-height: 1.4;
@@ -189,8 +162,9 @@
         flex-direction: column;
     }
 
-    .footer-container {
+    .footer-background-color {
         gap: 100px;
+        position: relative;
     }
 
     .logo-footer {
@@ -198,14 +172,11 @@
     }
 
     .footer-phone {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        position: absolute;
         top: 40px;
         right: 40px;
         width: 160px;
         height: 48px;
-        padding: 0;
     }
 
     .footer-tel-link {
@@ -214,15 +185,15 @@
     }
 
     .footer-text-section {
-        width: 524px;
-        height: 96px;
         margin-top: 86px;
     }
-     .footer-section-menu::after {
+
+    .footer-section-menu::after {
         bottom: -28px;
-     }
+    }
 
     .footer-text {
+        max-width: 524px;
         font-size: 28px;
         line-height: 1.1;
     }
@@ -231,11 +202,6 @@
         gap: 56px;
     }
 
-    .footer-section-menu {
-        gap: 62px;
-    }
-
-   
     .footer-list {
         display: flex;
         align-items: flex-start;
@@ -251,7 +217,8 @@
     }
 
     .footer-address {
-        min-width: 162px;
+        max-width: 162px;
+        margin-left: auto;
     }
 
     .footer-section-box {
@@ -260,7 +227,6 @@
         justify-content: flex-start;
         flex-direction: row;
         flex-wrap: nowrap;
-        gap: 159px;
     }
 
     .footer-box-text {
@@ -276,45 +242,49 @@
 }
 
 @media screen and (min-width: 1280px) {
-    .footer-container {
+
+    .footer-background-color {
         gap: 126px;
-        margin: 0;
     }
 
     .footer-section {
         display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
     }
+
     .footer-text,
     .footer-text-section,
     .footer-phone,
     .footer-tel-link {
         display: none;
     }
+
     .footer-section-logo {
         margin-right: 178px;
     }
+
     .footer-text-section-desktop {
-        width: 523px;
-        height: 96px;
         margin-right: 147px;
     }
+
     .footer-text-desktop {
+        max-width: 615px;
         font-weight: 600;
         font-size: 28px;
         line-height: 1.14286;
         letter-spacing: -0.02em;
         text-align: center;
         color: #fbfbfb;
+
     }
-    .footer-phone-desktop {
+
+    .footer-tel-link-desktop {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         border: 1px solid rgba(251, 251, 251, 0.2);
         border-radius: 16px;
         width: 160px;
         height: 48px;
-    }
-    .footer-tel-link-desktop {
         font-weight: 500;
         font-size: 14px;
         line-height: 1.28571;
@@ -322,7 +292,7 @@
         text-align: center;
         color: #fbfbfb;
     }
-    
+
     .footer-content {
         flex-direction: column;
         gap: 56px;
