--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -60,7 +60,7 @@
     </button>
   </div>
   <!--menu-->
-  <div class="menu-header is-open" data-modal>
+  <div class="menu-header is-hidden" data-modal>
     <div class="menu-header-wrap">
       <button type="button" class="btn-close" data-modal-close>
         <svg width="24" height="24">
