--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" id="to-footer">
+<footer class="footer" id="footer">
     <div class="container footer-container">
         <div class="footer-background-color">
             <div class="footer-section">
