--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,17 +11,13 @@
         <li><a class="link-header" href="#catalog">Catalog</a></li>
         <li><a class="link-header" href="#sale">Sale</a></li>
         <li><a class="link-header" href="#reviews">Reviews</a></li>
-        <li><a class="link-header" href="#contact Us">Contact Us</a></li>
+        <li><a class="link-header" href="#contact-us">Contact Us</a></li>
       </ul>
     </nav>
     <div class="header-socials">
       <ul class="header-icon-socials">
         <li class="header-item-icon">
-          <a
-            href="https://www.facebook.com/goITclub/"
-            target="_blank"
-            class="social-link-header"
-          >
+          <a href="https://www.facebook.com/goITclub/" target="_blank" class="social-link-header">
             <svg width="21" height="20">
               <use href="./img/icons_header.svg#icon-facebook"></use>
             </svg>
@@ -29,11 +25,7 @@
         </li>
 
         <li class="header-item-icon">
-          <a
-            href="https://www.instagram.com/goitclub/"
-            target="_blank"
-            class="social-link-header"
-          >
+          <a href="https://www.instagram.com/goitclub/" target="_blank" class="social-link-header">
             <svg width="21" height="20">
               <use href="./img/icons_header.svg#icon-instagram"></use>
             </svg>
@@ -41,11 +33,7 @@
         </li>
 
         <li class="header-item-icon">
-          <a
-            href="https://www.youtube.com/c/GoIT"
-            target="_blank"
-            class="social-link-header"
-          >
+          <a href="https://www.youtube.com/c/GoIT" target="_blank" class="social-link-header">
             <svg width="21" height="20">
               <use href="./img/icons_header.svg#icon-youtube"></use>
             </svg>
@@ -83,11 +71,7 @@
       <div class="menu-header-socials">
         <ul class="menu-header-icon-socials">
           <li class="menu-header-item-icon">
-            <a
-              href="https://www.facebook.com/goITclub/"
-              target="_blank"
-              class="menu-social-link-header"
-            >
+            <a href="https://www.facebook.com/goITclub/" target="_blank" class="menu-social-link-header">
               <svg width="21" height="20">
                 <use href="./img/icons_header.svg#icon-facebook"></use>
               </svg>
@@ -95,11 +79,7 @@
           </li>
 
           <li class="menu-header-item-icon">
-            <a
-              href="https://www.instagram.com/goitclub/"
-              target="_blank"
-              class="menu-social-link-header"
-            >
+            <a href="https://www.instagram.com/goitclub/" target="_blank" class="menu-social-link-header">
               <svg width="21" height="20">
                 <use href="./img/icons_header.svg#icon-instagram"></use>
               </svg>
@@ -107,11 +87,7 @@
           </li>
 
           <li class="menu-header-item-icon">
-            <a
-              href="https://www.youtube.com/c/GoIT"
-              target="_blank"
-              class="menu-social-link-header"
-            >
+            <a href="https://www.youtube.com/c/GoIT" target="_blank" class="menu-social-link-header">
               <svg width="21" height="20">
                 <use href="./img/icons_header.svg#icon-youtube"></use>
               </svg>
