--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -2,10 +2,6 @@
     padding-top: 60px;
     padding-bottom: 60px;
 }
-
-
-
-
 .your-story-backdrop {
     padding: 60px 28px;
     border-radius: 30px;
@@ -48,16 +44,12 @@ font-weight: 600;
 .advertisement-btn-link {
 font-weight: 500;
     font-size: 14px;
-    /* line-height: 129%; */
-    /* text-align: center; */
     color: #fbfbfb;
     border: 1px solid rgba(251, 251, 251, 0.15);
     border-radius: 16px;
     max-width: 160px;
     height: 48px;
     background-color: transparent;
-    /* margin-bottom: 60px; */
-
     line-height: 1.29;
     padding: 15px 43px;
     min-width: 160px;
@@ -65,6 +57,10 @@ font-weight: 500;
     transition: 
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.advertisement-btn-link:hover{
+    background-color:#fbfbfb;
+    color:#0c0c0c;
 }
 
 .advertisement-btn:hover,
@@ -81,7 +77,6 @@ font-weight: 500;
 .your-story-backdrop {
     padding: 80px 64px;
         background-image: url(/img/70bg-tablet1x.png);
-
         gap: 32px;
 }
 
@@ -101,17 +96,6 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
 
     max-width: 576px;
 }
-.advertisement-btn{
-    /* margin-bottom: 80px; */
-}
-
-/* @media (min-resolution: 192dpi) {
-    .your-story-backdrop {
-        background-image:
-            url(../img/70bg-tablet2x.png);
-    }
-} */
-
 }
 
 @media screen and (min-width: 1280px) {
@@ -122,12 +106,6 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
 
     .your-story-backdrop{
         background-image : url(/img/70bg-desktop1x.png);
-        /* padding-top: 83px;
-        padding-bottom: 83px;
-        padding-left: 80px; */
-        /* display: flex;
-        gap: 140px; */
-
         padding: 80px 80px 83px 80px;
         flex-direction: row;
         gap: 140px;
