--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -7,7 +7,7 @@
 .footer-background-color {
     background: #0c0c0c;
     border-radius: 30px;
-    padding: 40px 28px 28px 28px;
+    padding: 40px 28px 28px;
     flex-direction: column;
     gap: 92px;
     display: flex;
@@ -23,7 +23,7 @@
 .logo-footer {
     font-weight: 500;
     font-size: 16px;
-    letter-spacing: -0.02em;
+    letter-spacing: -.02em;
     color: #fbfbfb;
 }
 
@@ -33,7 +33,7 @@
 }
 
 .footer-item-icon {
-    border: 1px solid rgba(251, 251, 251, 0.1);
+    border: 1px solid rgba(251, 251, 251, .1);
     border-radius: 10px;
     padding: 8px;
     width: 34px;
@@ -44,7 +44,7 @@
     fill: #fbfbfb;
     width: 16px;
     height: 16px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill .25s cubic-bezier(.4, 0, .2, 1);
 }
 
 .footer-social-link:hover,
@@ -56,7 +56,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid rgba(251, 251, 251, 0.2);
+    border: 1px solid rgba(251, 251, 251, .2);
     border-radius: 16px;
     width: 152px;
     height: 44px;
@@ -81,7 +81,7 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 1.2;
-    letter-spacing: -0.02em;
+    letter-spacing: -.02em;
     text-align: center;
     color: #fbfbfb;
 }
@@ -95,16 +95,17 @@
 .footer-section-menu {
     display: flex;
     position: relative;
+    gap: 49px;
 }
 
-.footer-section-menu::after {
+.footer-section-menu:after {
     content: "";
     width: 100%;
     position: absolute;
     left: 0;
     bottom: -24px;
     height: 1px;
-    background-color: rgba(251, 251, 251, 0.1);
+    background-color: #fbfbfb1a;
 }
 
 .footer-list {
@@ -114,13 +115,7 @@
     min-width: 147px;
 }
 
-.link-footer {
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.3;
-    color: #fbfbfb;
-}
-
+.link-footer,
 .footer-address {
     font-weight: 500;
     font-size: 12px;
@@ -132,8 +127,8 @@
     font-weight: 500;
     font-size: 10px;
     line-height: 1.4;
-    letter-spacing: -0.02em;
-    color: rgba(251, 251, 251, 0.5);
+    letter-spacing: -.02em;
+    color: #fbfbfb80;
     opacity: 0.9;
 }
 
@@ -148,9 +143,9 @@
     font-weight: 500;
     font-size: 10px;
     line-height: 1.4;
-    letter-spacing: -0.02em;
+    letter-spacing: -.02em;
     text-align: right;
-    color: rgba(251, 251, 251, 0.5);
+    color: #fbfbfb80;
 }
 
 @media screen and (min-width: 768px) {
@@ -169,6 +164,7 @@
 
     .footer-phone {
         position: absolute;
+        margin-top: 0;
         top: 40px;
         right: 40px;
         width: 160px;
@@ -184,14 +180,14 @@
         margin-top: 86px;
         margin-left: auto;
         margin-right: auto;
+        max-width: 524px;
     }
 
-    .footer-section-menu::after {
+    .footer-section-menu:after {
         bottom: -28px;
     }
 
     .footer-text {
-        max-width: 524px;
         font-size: 28px;
         line-height: 1.1;
     }
@@ -240,13 +236,12 @@
 }
 
 @media screen and (min-width: 1280px) {
-
     .footer-background-color {
         gap: 126px;
     }
 
     .footer-section {
-        display: flex;
+        display: flex
     }
 
     .footer-text,
@@ -261,15 +256,15 @@
     }
 
     .footer-text-section-desktop {
-        margin-right: 147px;
+        min-width: 615px;
     }
 
     .footer-text-desktop {
-        max-width: 615px;
+        max-width: 523px;
         font-weight: 600;
         font-size: 28px;
         line-height: 1.14286;
-        letter-spacing: -0.02em;
+        letter-spacing: -.02em;
         text-align: center;
         color: #fbfbfb;
     }
@@ -278,7 +273,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        border: 1px solid rgba(251, 251, 251, 0.2);
+        border: 1px solid rgba(251, 251, 251, .2);
         border-radius: 16px;
         width: 160px;
         height: 48px;
@@ -295,15 +290,11 @@
         gap: 56px;
     }
 
-    .footer-section-menu {
-        gap: 469px;
-    }
-
     .footer-list {
         min-width: 505px;
     }
 
-    .footer-section-box {
-        gap: 671px;
+    .footer-address {
+        min-width: 162px;
     }
 }
